--- a/css/styles.css
+++ b/css/styles.css
@@ -1,212 +1,236 @@
+/* /* цвет основного текста #000000 */
+/* вторичный цвет текста  rgba(0, 0, 0, 0.8);
+ */
+/* белый #FFFFFF  */
+/* акцент #18A0FB */
+/* вторичный цвет фона #F5F5F5; */
+
+:root {
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --accent-color: #2196f3;
+  --primary-white-color: #ffffff;
+}
+
 body {
+  background-color: var(--primary-white-color);
+  color: var(--primary-text-color);
+
   font-family: Roboto, sans-serif;
-  color: #757575;
-}
-
-/* шапка */
-.header {
-  background: #ffffff;
-  border: 1px solid #ececec;
-}
-
-.link {
-  text-decoration: none;
-}
-
-.header .logo {
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #000000;
-}
-
-.logo span {
-  color: #2196f3;
-}
-
-.nav .link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #212121;
-}
-
-.link.link-current {
-  color: #2196f3;
-}
-
-.header .contacts {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #757575;
-}
-
-.nav .link:hover,
-.nav .link:focus,
-.link.contacts:hover,
-.link.contacts:focus {
-  color: #2196f3;
 }
 
 .list {
   list-style-type: none;
 }
 
-.footer {
-  background: #2f303a;
+.link {
+  text-decoration: none;
 }
 
-.footer .logo {
+.logo {
   font-family: Raleway;
+  font-style: normal;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: #ffffff;
+}
+
+.logo span {
+  color: var(--accent-color);
+}
+
+/* шапка */
+
+.header .logo {
+  color: #000000;
+}
+
+.nav .link {
+  color: var(--title-text-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+}
+
+.nav .link-current {
+  color: var(--accent-color);
+}
+
+.header .contacts {
+  color: var(--primary-text-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+}
+
+.nav .link:hover,
+.nav .link:focus,
+.link.contacts:hover,
+.link.contacts:focus {
+  color: var(--accent-color);
+}
+
+/* Подвал */
+.footer {
+  background-color: #2f303a;
+}
+
+.footer .logo {
+  color: var(--primary-white-color);
 }
 
 .footer .address {
+  color: var(--primary-white-color);
+
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #ffffff;
 }
 
 .footer .contacts {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
 
+/* Кнопки портфолио */
 .btn {
-  font-family: inherit;
+  background-color: #f5f4fa;
+  color: var(--title-text-color);
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
-  background: #f5f4fa;
+
   cursor: pointer;
 }
 
-.project .item {
-  background: #ffffff;
+.btn:hover,
+.btn:focus {
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
 }
 
-.project .link {
-  color: inherit;
-}
-
-.project-name {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: #212121;
-}
-
-.project-type {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
+/* Герой */
 .hero {
-  background: #2f303a;
+  background-color: #2f303a;
 }
 
 .hero .title {
+  color: var(--primary-white-color);
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
-  color: #ffffff;
 }
 
 .hero .btn {
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  text-align: center;
   letter-spacing: 0.06em;
-  color: #ffffff;
-  background: #2196f3;
+
+  cursor: pointer;
 }
 
 .hero .btn:hover,
 .hero .btn:focus {
-  background: #188ce8;
+  background-color: #188ce8;
 }
 
+/* Примеры работ */
+.examples .title {
+  color: var(--title-text-color);
+}
+
+.project-name {
+  color: var(--title-text-color);
+
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.project-type {
+  color: var(--primary-text-color);
+
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+}
+
+/* Преимущества */
 .feature .title {
-  font-weight: 700;
+  color: var(--title-text-color);
+
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  color: #212121;
 }
 
 .feature .text {
-  font-weight: 400;
+  color: var(--primary-text-color);
+
   font-size: 14px;
-  line-height: 21.714px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #757575;
 }
 
+/* Направления работы */
 .services .title {
-  font-weight: 700;
+  color: var(--title-text-color);
+
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
 }
+
+/* Сотрудники */
 .team {
-  background: #f5f4fa;
+  background-color: #f5f4fa;
 }
 
 .team .title {
-  font-weight: 700;
+  color: var(--title-text-color);
+
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
 }
 
 .team .item {
-  background: #ffffff;
+  background-color: var(--primary-white-color);
 }
 
 .team .name {
+  color: var(--title-text-color);
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
 }
 
 .team .text {
-  font-weight: 400;
+  color: var(--primary-text-color);
+
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #757575;
 }
